format tweaks, add du bist oh herr gegangen

--- a/tex/Gemeinde.tex
+++ b/tex/Gemeinde.tex
@@ -1,13 +1,14 @@
-\documentclass[a5paper]{scrbook}
+\documentclass[a4paper,fontsize=16pt]{scrbook}
 \usepackage[chorded]{songs}
 \usepackage[utf8]{inputenc}
 \usepackage[ngerman]{babel}
 \usepackage{DejaVuSans}
-\renewcommand*\lyricfont{\sffamily\small}
-\renewcommand*\printchord[1]{\sffamily\sl#1}
+%\renewcommand*\familydefault{\sfdefault}
+%\renewcommand*\lyricfont{\sffamily\small}
+%\renewcommand*\printchord[1]{\sffamily\sl#1}
 \usepackage[T1]{fontenc}
 \renewcommand{\clineparams}{
-  \baselineskip=10pt
+  \baselineskip=16pt
   \lineskiplimit=1pt
   \lineskip=1pt
 }
@@ -20,11 +21,11 @@
 \input{lieder/jesus_hoechster_name}
 
 \begin{intersong*}
-\includegraphics[height=0.9\textheight]{lib/preisundanbetung.pdf}
+\includegraphics[height=0.94\textheight]{lib/preisundanbetung.pdf}
 \end{intersong*}
 \setcounter{songnum}{3}
 
-\input{lieder/jesus_hoechster_name}
+\input{lieder/du_bist_oh_herr_gegangen}
 
 \end{songs}
 
