--- a/tex/Gemeinde_OH.tex
+++ b/tex/Gemeinde_OH.tex
@@ -1,12 +1,23 @@
-\documentclass[a5paper]{scrbook}
+\documentclass{article}
+\usepackage[%
+  papersize={12.8cm,9.6cm},
+  hmargin=1cm,%
+  vmargin=1cm,%
+  head=1cm,% might be changed later
+  headsep=0pt,%
+  foot=1cm% might be changed later
+  ]{geometry}% http://ctan.org/pkg/geometry
 \usepackage[slides]{songs}
 \usepackage[utf8]{inputenc}
 \usepackage[ngerman]{babel}
+\usepackage{DejaVuSans}
+\renewcommand*\familydefault{\sfdefault}
 
 \begin{document}
 
 \begin{songs}{}
 \input{lieder/jesus_hoechster_name}
+\input{lieder/du_bist_oh_herr_gegangen}
 \end{songs}
 
 \end{document}
