added auf dem lamm

--- a/tex/Gemeinde.tex
+++ b/tex/Gemeinde.tex
@@ -5,7 +5,7 @@
 \usepackage{DejaVuSans}
 %\renewcommand*\familydefault{\sfdefault}
 %\renewcommand*\lyricfont{\sffamily\small}
-%\renewcommand*\printchord[1]{\sffamily\sl#1}
+%\renewcommand*\printchord[1]{\sffamily\it\small\bf#1}
 \usepackage[T1]{fontenc}
 \renewcommand{\clineparams}{
   \baselineskip=16pt
@@ -27,6 +27,7 @@
 
 \input{lieder/du_bist_oh_herr_gegangen}
 \input{lieder/in_christus_ist}
+\input{lieder/auf_dem_lamm}
 
 \end{songs}
 
