added amazing grace and love

--- a/tex/Jugend.tex
+++ b/tex/Jugend.tex
@@ -20,8 +20,8 @@
 
 \input{lieder/above_all}
 % \input{lieder/all_die_fülle_ist_in_dir}
-% \input{lieder/amazing_grace}
-% \input{lieder/amazng_love}
+\input{lieder/amazing_grace}
+\input{lieder/amazng_love}
 % \input{lieder/auf_dem_lamm}
 % \input{lieder/auf_dem_lamm}
 % \input{lieder/auf_dem_lamm}
