add auf dem lamm

--- a/tex/Jugend.tex
+++ b/tex/Jugend.tex
@@ -22,9 +22,7 @@
 % \input{lieder/all_die_fülle_ist_in_dir}
 \input{lieder/amazing_grace}
 \input{lieder/amazng_love}
-% \input{lieder/auf_dem_lamm}
-% \input{lieder/auf_dem_lamm}
-% \input{lieder/auf_dem_lamm}
+\input{lieder/auf_dem_lamm}
 % \input{lieder/bleiben_ist_deine_treu}
 % \input{lieder/create_in_me_a_clean_heart}
 % \input{lieder/denn_ich_bin_gewiss}
