added denn ich bin gewiss

--- a/tex/Jugend.tex
+++ b/tex/Jugend.tex
@@ -25,7 +25,7 @@
 \input{lieder/auf_dem_lamm}
 \input{lieder/bleiben_ist_deine_treu}
 \input{lieder/create_in_me_a_clean_heart}
-% \input{lieder/denn_ich_bin_gewiss}
+\input{lieder/denn_ich_bin_gewiss}
 % \input{lieder/der_du_das_all_regierst}
 % \input{lieder/der_herr_ist_mein_hirte}
 % \input{lieder/der_weinstock}
