--- a/tex/Jugend.tex
+++ b/tex/Jugend.tex
@@ -28,11 +28,11 @@
 \input{lieder/bleiben_ist_deine_treu}
 \input{lieder/create_in_me_a_clean_heart}
 \input{lieder/denn_ich_bin_gewiss}
-% \input{lieder/der_du_das_all_regierst}
-% \input{lieder/der_herr_ist_mein_hirte}
-% \input{lieder/der_weinstock}
-% \input{lieder/diese_macht_hat_das_kreuz}
-% \input{lieder/du_bist_der_weg}
+\input{lieder/der_du_das_all_regierst}
+\input{lieder/der_herr_ist_mein_hirte}
+\input{lieder/der_weinstock}
+\input{lieder/diese_macht_hat_das_kreuz}
+\input{lieder/du_bist_der_weg}
 % \input{lieder/du_bist_mein_zufluchtsort}
 % \input{lieder/du_bist_oh_herr_gegangen}
 % \input{lieder/du_bist_oh_herr_gegangen}
