added heart of worship to komm und segne uns

--- a/tex/Jugend.tex
+++ b/tex/Jugend.tex
@@ -42,12 +42,12 @@
 \input{lieder/geh_unter_der_gnade}
 \input{lieder/gluecklich_ist_der_mensch}
 \input{lieder/grosser_gott_wir_loben_dich}
-% \input{lieder/heart_of_worship}
-% \input{lieder/herr,_dein_name_sei_erhöhtXXXzusammenmitlordiliftyournameonhigh}
-% \input{lieder/herr,_halte_mich_nah_bei_dir}
-% \input{lieder/herr_ich_komme_zu_dir}
-% \input{lieder/herr_wie_unaussprechlich_selig}
-% \input{lieder/herr_wir_bitten_komm_und_segne_uns}
+\input{lieder/heart_of_worship}
+\input{lieder/herr,_dein_name_sei_erhoehtXXXzusammenmitlordiliftyournameonhigh}
+\input{lieder/herr,_halte_mich_nah_bei_dir}
+\input{lieder/herr_ich_komme_zu_dir}
+\input{lieder/herr_wie_unaussprechlich_selig}
+\input{lieder/herr_wir_bitten_komm_und_segne_uns}
 % \input{lieder/how_deep_the_father`s_love}
 % \input{lieder/humble_thyself}
 % \input{lieder/ich_bin_nicht_wert}
