--- a/tex/Jugend.tex
+++ b/tex/Jugend.tex
@@ -56,35 +56,29 @@
 % \input{lieder/in_christ_alone_orginal}
 \input{lieder/in_christus_ist_geaenderte_Version}
 % \input{lieder/in_christus_ist_orginal}
-% \input{lieder/in_christus_ist}
-% \input{lieder/in_christus_ist}
-% \input{lieder/in_christus_ist}
-% \input{lieder/i_will_sing_your_praises}
-% \input{lieder/jesus_hoechster_name}
-% \input{lieder/jesus_hoechster_name}
-% \input{lieder/jesus_hoechster_name}
-% \input{lieder/jesus_hoechster_name}
-% \input{lieder/Jesus_will_uns_bau'n_zu_einem_Tempel}
-% \input{lieder/jesus_wir_sehen_auf_dich}
-% \input{lieder/jesus_zu_dir_darf_ich_so_kommen}
-% \input{lieder/lobpreiset_unsern_gott_freuet_euch}
-% \input{lieder/lord,_i_lift_your_name_on_high}
-% \input{lieder/make_my_life_a_prayer}
-% \input{lieder/meine_zeit_steht_in_deinen_händen}
-% \input{lieder/morgenstern}
-% \input{lieder/my_savior_my_god}
-% \input{lieder/nähme_ich_flügel_der_morgenröte}
-% \input{lieder/o_du_lamm_gottes}
-% \input{lieder/only_you}
-% \input{lieder/Psalm_150}
-% \input{lieder/there_is_a_redeemer}
-% \input{lieder/this_is_my_desire}
-% \input{lieder/thy_word}
-% \input{lieder/wie_ein_hirsch}
-% \input{lieder/wie_tief_muss_gottes_liebe_sein}
-% \input{lieder/würdig_das_lamm}
-% \input{lieder/you_are_my_all_in_all}
-% \input{lieder/you_are_my_hiding_place}
+\input{lieder/i_will_sing_your_praises}
+\input{lieder/jesus_hoechster_name}
+\input{lieder/Jesus_will_uns_bau'n_zu_einem_Tempel}
+\input{lieder/jesus_wir_sehen_auf_dich}
+\input{lieder/jesus_zu_dir_darf_ich_so_kommen}
+\input{lieder/lobpreiset_unsern_gott_freuet_euch}
+\input{lieder/lord,_i_lift_your_name_on_high}
+\input{lieder/make_my_life_a_prayer}
+\input{lieder/meine_zeit_steht_in_deinen_haenden}
+\input{lieder/morgenstern}
+\input{lieder/my_savior_my_god}
+\input{lieder/naehme_ich_fluegel_der_morgenroete}
+\input{lieder/o_du_lamm_gottes}
+\input{lieder/only_you}
+\input{lieder/Psalm_150}
+\input{lieder/there_is_a_redeemer}
+\input{lieder/this_is_my_desire}
+\input{lieder/thy_word}
+\input{lieder/wie_ein_hirsch}
+\input{lieder/wie_tief_muss_gottes_liebe_sein}
+\input{lieder/wuerdig_das_lamm}
+\input{lieder/you_are_my_all_in_all}
+\input{lieder/you_are_my_hiding_place}
 
 \end{songs}
 
