generate different version from same songlist

--- a/tex/Gemeinde_OH.tex
+++ b/tex/Gemeinde_OH.tex
@@ -18,8 +18,9 @@
 \begin{document}
 
 \begin{songs}{}
-\input{lieder/jesus_hoechster_name}
-\input{lieder/du_bist_oh_herr_gegangen}
+
+\input{tex/gemeinde_songs}
+
 \end{songs}
 
 \end{document}
