--- a/tex/Gemeinde_TO.tex
+++ b/tex/Gemeinde_TO.tex
@@ -10,14 +10,15 @@
 \begin{document}
 
 \begin{songs}{}
-\input{lieder/jesus_hoechster_name}
 
-\begin{intersong*}
-\includegraphics[height=0.94\textheight]{lib/preisundanbetung.pdf}
-\end{intersong*}
-\setcounter{songnum}{3}
+% \input{lieder/jesus_hoechster_name}
 
-\input{lieder/du_bist_oh_herr_gegangen}
+% \begin{intersong*}
+% \includegraphics[height=0.94\textheight]{lib/preisundanbetung.pdf}
+% \end{intersong*}
+% \setcounter{songnum}{3}
+
+\input{tex/gemeinde_songs}
 
 \end{songs}
 
