--- a/tex/Gemeinde.tex
+++ b/tex/Gemeinde.tex
@@ -20,16 +20,14 @@
 
 \begin{songs}{}
 
-\input{lieder/jesus_hoechster_name}
+% \input{lieder/jesus_hoechster_name}
 
-\begin{intersong*}
-\includegraphics[height=0.94\textheight]{lib/preisundanbetung.pdf}
-\end{intersong*}
-\setcounter{songnum}{3}
+% \begin{intersong*}
+% \includegraphics[height=0.94\textheight]{lib/preisundanbetung.pdf}
+% \end{intersong*}
+% \setcounter{songnum}{3}
 
-\input{lieder/du_bist_oh_herr_gegangen}
-\input{lieder/in_christus_ist}
-\input{lieder/auf_dem_lamm}
+\input{tex/gemeinde_songs}
 
 \end{songs}
 
