cut down on page margins, remove page number

--- a/tex/Gemeinde_TO.tex
+++ b/tex/Gemeinde_TO.tex
@@ -1,11 +1,4 @@
-\documentclass[a4paper,fontsize=16pt]{scrbook}
-\usepackage[lyric]{songs}
-\usepackage[utf8]{inputenc}
-\usepackage[ngerman]{babel}
-\usepackage{pdfpages}
-\usepackage{DejaVuSans}
-
-\def\lmnumcols{2}
+\input{tex/textonly}
 
 \begin{document}
 
