--- a/tex/Jugend_TO.tex
+++ b/tex/Jugend_TO.tex
@@ -1,28 +1,6 @@
-\documentclass[a4paper,fontsize=16pt]{scrbook}
-\usepackage[lyric]{songs}
-\usepackage[utf8]{inputenc}
-\usepackage[ngerman]{babel}
-\usepackage{DejaVuSans}
-%\renewcommand*\familydefault{\sfdefault}
-%\renewcommand*\lyricfont{\sffamily\small}
-%\renewcommand*\printchord[1]{\sffamily\it\small\bf#1}
-
-
-
-
-
-\usepackage[T1]{fontenc}
-\renewcommand{\clineparams}{
-  \baselineskip=16pt
-  \lineskiplimit=1pt
-  \lineskip=1pt
-}
-\usepackage{pdfpages}
+\input{tex/textonly}
 
 \begin{document}
-
-\songcolumns{1}
-\def\lmnumcols{1}
 
 \begin{songs}{}
 
