--- a/tex/beide_songs.tex
+++ b/tex/beide_songs.tex
@@ -1,13 +1,11 @@
-\setcounter{songnum}{500}
+\setcounter{songnum}{400}
 
-\input{lieder/du_bist_oh_herr_gegangen}
-\input{lieder/in_christus_ist}
-\input{lieder/auf_dem_lamm}
-\input{lieder/all_die_fuelle_ist_in_dir}
-\input{lieder/bleiben_ist_deine_treu}
 \input{lieder/above_all}
+\input{lieder/all_die_fuelle_ist_in_dir}
 \input{lieder/auf_dem_lamm}
 \input{lieder/amazing_grace}
+\input{lieder/amazng_love}
+\input{lieder/bleiben_ist_deine_treu}
 \input{lieder/create_in_me_a_clean_heart}
 \input{lieder/denn_ich_bin_gewiss}
 \input{lieder/der_lastentraeger}
