--- a/tex/font.tex
+++ b/tex/font.tex
@@ -1,6 +1,7 @@
 \usepackage{DejaVuSans}
 %\renewcommand*\familydefault{\sfdefault}
 %\renewcommand*\lyricfont{\sffamily\small}
+%\renewcommand*\printchord[1]{\sffamily\small\textsl{#1}}
 \renewcommand*\printchord[1]{\sffamily\small\textsl{#1}}
 \usepackage{utopia}
 \usepackage[T1]{fontenc}
