--- a/tex/textonly.tex
+++ b/tex/textonly.tex
@@ -6,8 +6,14 @@
 
 \input{tex/font}
 
+\renewcommand{\clineparams}{
+  \baselineskip=24pt
+  \lineskiplimit=1pt
+  \lineskip=1pt
+}
+
 \usepackage{pdfpages}
 
 \setlength{\songnumwidth}{2cm}
-\songcolumns{2}
-\def\lmnumcols{2}
+\songcolumns{1}
+\def\lmnumcols{1}
