--- a/tex/gemeinde_songs.tex
+++ b/tex/gemeinde_songs.tex
@@ -1,7 +1,7 @@
 \setcounter{songnum}{500}
 
 \input{lieder/du_bist_oh_herr_gegangen}
-\input{lieder/in_christus_ist}
+\input{lieder/in_christus_ist_geaenderte_Version}
 \input{lieder/auf_dem_lamm}
 \input{lieder/all_die_fuelle_ist_in_dir}
 \input{lieder/bleiben_ist_deine_treu}
