--- a/tex/gemeinde_songs.tex
+++ b/tex/gemeinde_songs.tex
@@ -1,71 +1,4 @@
 \setcounter{songnum}{500}
 
-\input{lieder/du_bist_oh_herr_gegangen}
-\input{lieder/in_christus_ist_geaenderte_Version}
-\input{lieder/auf_dem_lamm}
+\input{lieder/o_gottes_lamm,_für_sünder_hingeschlachtet}
 \input{lieder/all_die_fuelle_ist_in_dir}
-\input{lieder/bleiben_ist_deine_treu}
-\input{lieder/above_all}
-\input{lieder/auf_dem_lamm}
-\input{lieder/amazing_grace}
-\input{lieder/create_in_me_a_clean_heart}
-\input{lieder/denn_ich_bin_gewiss}
-\input{lieder/der_lastentraeger}
-\input{lieder/der_lastentraeger_ohne_capo}
-\input{lieder/der_herr_ist_mein_hirte}
-\input{lieder/du_hast_erbarmen}
-\input{lieder/diese_macht_hat_das_kreuz}
-\input{lieder/er_ist_der_erloeser}
-\input{lieder/der_weinstock}
-\input{lieder/du_bist_der_weg}
-\input{lieder/du_bist_mein_zufluchtsort}
-\input{lieder/you_are_my_hiding_place}
-\input{lieder/du_gibst_das_leben}
-\input{lieder/ein_leben,_gegeben}
-\input{lieder/geh_unter_der_gnade}
-\input{lieder/heart_of_worship}
-\input{lieder/gluecklich_ist_der_mensch}
-\input{lieder/grosser_gott_wir_loben_dich}
-\input{lieder/humble_thyself}
-\input{lieder/herr,_halte_mich_nah_bei_dir}
-\input{lieder/herr_wie_unaussprechlich_selig}
-\input{lieder/i_will_sing_your_praises}
-\input{lieder/herr_wir_bitten_komm_und_segne_uns}
-\input{lieder/herr_ich_komme_zu_dir}
-\input{lieder/how_deep_the_fathers_love}
-\input{lieder/how_deep_the_fathers_love_ohne_capo}
-\input{lieder/wie_tief_muss_gottes_liebe_sein}
-\input{lieder/wie_tief_muss_gottes_liebe_sein_ohne_capo}
-\input{lieder/ich_bin_nicht_wert}
-\input{lieder/ich_will_dich_erheben}
-\input{lieder/ich_trau_auf_dich_oh_herr_version1}
-\input{lieder/in_ihm_ist_alles_was_ich_brauch}
-\input{lieder/in_christ_alone_geaenderte_Version}
-\input{lieder/in_christus_ist_geaenderte_Version}
-\input{lieder/jesus_hoechster_name}
-\input{lieder/Jesus_will_uns_bau'n_zu_einem_Tempel}
-\input{lieder/jesus_wir_sehen_auf_dich}
-\input{lieder/lobpreiset_unsern_gott_freuet_euch}
-\input{lieder/jesus_zu_dir_darf_ich_so_kommen}
-\input{lieder/lord,_i_lift_your_name_on_high}
-\input{lieder/herr,_dein_name_sei_erhoeht}
-\input{lieder/make_my_life_a_prayer}
-\input{lieder/meine_zeit_steht_in_deinen_haenden}
-\input{lieder/only_you}
-\input{lieder/my_savior_my_god}
-\input{lieder/my_savior_my_god_ohne_capo}
-\input{lieder/Psalm_150}
-\input{lieder/whom_have_i}
-\input{lieder/whom_have_i_ohne_capo}
-\input{lieder/naehme_ich_fluegel_der_morgenroete}
-\input{lieder/o_du_lamm_gottes}
-\input{lieder/morgenstern}
-\input{lieder/o_gottes_lamm}
-\input{lieder/sing_halleluja_unsserm_herrn}
-\input{lieder/there_is_a_redeemer}
-\input{lieder/this_is_my_desire}
-\input{lieder/thy_word}
-\input{lieder/dein_wort_ist_ein_licht_auf_meinem_weg}
-\input{lieder/wie_ein_hirsch}
-\input{lieder/wuerdig_das_lamm}
-\input{lieder/you_are_my_all_in_all}
