--- a/tex/beide_songs.tex
+++ b/tex/beide_songs.tex
@@ -20,3 +20,4 @@
 \input{lieder/geh_unter_der_gnade}
 \input{lieder/in_ihm_ist_alles_was_ich_brauch}
 \input{lieder/ich_will_dich_erheben}
+\input{lieder/o_gottes_lamm}
