--- a/tex/gemeinde_songs.tex
+++ b/tex/gemeinde_songs.tex
@@ -1,4 +1,4 @@
 \setcounter{songnum}{500}
 
-\input{lieder/o_gottes_lamm,_für_sünder_hingeschlachtet}
+\input{lieder/o_gottes_lamm,_fuer_suender_hingeschlachtet}
 \input{lieder/all_die_fuelle_ist_in_dir}
