add inhaltsverzeichnis (indexes)

--- a/tex/Gemeinde.tex
+++ b/tex/Gemeinde.tex
@@ -1,19 +1,16 @@
 \input{tex/chorded}
 
+\newindex{inhalt}{inhalt-gemeinde}
+
 \begin{document}
 
-\begin{songs}{}
-
-% \input{lieder/jesus_hoechster_name}
-
-% \begin{intersong*}
-% \includegraphics[height=0.94\textheight]{lib/preisundanbetung.pdf}
-% \end{intersong*}
-% \setcounter{songnum}{3}
+\begin{songs}{inhalt}
 
 \input{tex/beide_songs}
 \input{tex/gemeinde_songs}
 
 \end{songs}
+
+\showindex[2]{Inhaltsverzeichnis}{inhalt}
 
 \end{document}
