--- a/tex/Jugend.tex
+++ b/tex/Jugend.tex
@@ -1,12 +1,16 @@
 \input{tex/chorded}
 
+\newindex{inhalt}{inhalt-jugend}
+
 \begin{document}
 
-\begin{songs}{}
+\begin{songs}{inhalt}
 
 \input{tex/beide_songs}
 \input{tex/jugend_songs}
 
 \end{songs}
+
+\showindex[2]{Inhaltsverzeichnis}{inhalt}
 
 \end{document}
