use local copy of songs.sty

--- a/tex/chorded.tex
+++ b/tex/chorded.tex
@@ -1,6 +1,6 @@
 \input{tex/layout}
 
-\usepackage[chorded]{songs}
+\usepackage[chorded]{tex/songs}
 \usepackage[utf8]{inputenc}
 \usepackage[ngerman]{babel}
 
