--- a/tex/overhead.tex
+++ b/tex/overhead.tex
@@ -7,7 +7,7 @@
   headsep=0pt,%
   foot=1cm% might be changed later
   ]{geometry}% http://ctan.org/pkg/geometry
-\usepackage[slides]{songs}
+\usepackage[slides]{tex/songs}
 \usepackage[utf8]{inputenc}
 \usepackage[ngerman]{babel}
 \usepackage{DejaVuSans}
