--- a/tex/textonly.tex
+++ b/tex/textonly.tex
@@ -1,6 +1,6 @@
 \input{tex/layout}
 
-\usepackage[lyric]{songs}
+\usepackage[lyric]{tex/songs}
 \usepackage[utf8]{inputenc}
 \usepackage[ngerman]{babel}
 
