rename a song file

--- a/tex/jugend_songs.tex
+++ b/tex/jugend_songs.tex
@@ -19,7 +19,7 @@
 \input{lieder/herr,_halte_mich_nah_bei_dir}
 \input{lieder/above_all}
 \input{lieder/Psalm_150}
-\input{lieder/amazng_love}
+\input{lieder/amazing_love}
 \input{lieder/ein_leben,_gegeben}
 \input{lieder/you_are_my_all_in_all}
 \input{lieder/Jesus_will_uns_bau'n_zu_einem_Tempel}
