render in Fourier

--- a/tex/font.tex
+++ b/tex/font.tex
@@ -3,8 +3,7 @@
 %\renewcommand*\lyricfont{\sffamily\small}
 %\renewcommand*\printchord[1]{\sffamily\small\textsl{#1}}
 \renewcommand*\printchord[1]{\sffamily\small\textsl{#1}}
-\usepackage{utopia}
-\usepackage[T1]{fontenc}
+\usepackage{fourier}
 
 \renewcommand{\clineparams}{
   \baselineskip=16pt
