added as the deer

--- a/tex/jugend_songs.tex
+++ b/tex/jugend_songs.tex
@@ -45,3 +45,4 @@
 \input{lieder/amazing_grace}
 \input{lieder/morgenstern}
 \input{lieder/herr_wir_bitten_komm_und_segne_uns}
+\input{lieder/as_the_deer}
