reordered songs for better printability

--- a/tex/beide_songs.tex
+++ b/tex/beide_songs.tex
@@ -1,21 +1,21 @@
 \setcounter{songnum}{400}
 
 \input{lieder/du_bist_oh_herr_gegangen}
-\input{lieder/in_christus_ist_geaenderte_Version}
 \input{lieder/wie_tief_muss_gottes_liebe_sein}
 \input{lieder/der_lastentraeger}
-\input{lieder/auf_dem_lamm}
-\input{lieder/lobpreiset_unsern_gott_freuet_euch}
-\input{lieder/jesus_lebt}
-\input{lieder/grosser_gott_wir_loben_dich}
-\input{lieder/jesus_hoechster_name}
-\input{lieder/diese_macht_hat_das_kreuz}
-\input{lieder/der_herr_ist_mein_hirte}
-\input{lieder/herr_wie_unaussprechlich_selig}
-\input{lieder/wie_ein_hirsch}
-\input{lieder/ich_bin_nicht_wert}
 \input{lieder/du_hast_erbarmen}
+\input{lieder/auf_dem_lamm}
+\input{lieder/wie_ein_hirsch}
+\input{lieder/in_christus_ist_geaenderte_Version}
+\input{lieder/lobpreiset_unsern_gott_freuet_euch}
+\input{lieder/grosser_gott_wir_loben_dich}
+\input{lieder/jesus_lebt}
 \input{lieder/geh_unter_der_gnade}
+\input{lieder/diese_macht_hat_das_kreuz}
 \input{lieder/in_ihm_ist_alles_was_ich_brauch}
 \input{lieder/ich_will_dich_erheben}
-\input{lieder/o_gottes_lamm}
+\input{lieder/der_herr_ist_mein_hirte}
+\input{lieder/jesus_hoechster_name}
+\input{lieder/herr_wie_unaussprechlich_selig}
+\input{lieder/ich_bin_nicht_wert}
+\input{lieder/oh_gottes_lamm}
