--- a/tex/font.tex
+++ b/tex/font.tex
@@ -3,7 +3,11 @@
 %\renewcommand*\lyricfont{\sffamily\small}
 %\renewcommand*\printchord[1]{\sffamily\small\textsl{#1}}
 \renewcommand*\printchord[1]{\sffamily\small\textsl{#1}}
-\usepackage{fourier}
+
+
+%\usepackage{fourier}
+
+\usepackage{DejaVuSerifCondensed}
 
 \renewcommand{\clineparams}{
   \baselineskip=16pt
