--- a/tex/font.tex
+++ b/tex/font.tex
@@ -7,7 +7,10 @@
 
 %\usepackage{fourier}
 
-\usepackage{DejaVuSerifCondensed}
+%\usepackage{DejaVuSerifCondensed}
+
+\usepackage{gfsartemisia-euler}
+\usepackage[T1]{fontenc}
 
 \renewcommand{\clineparams}{
   \baselineskip=16pt
