--- a/tex/beide_songs.tex
+++ b/tex/beide_songs.tex
@@ -19,3 +19,4 @@
 \input{lieder/herr_wie_unaussprechlich_selig}
 \input{lieder/ich_bin_nicht_wert}
 \input{lieder/oh_gottes_lamm}
+\input{lieder/ich_gehe_heim}
