set font to palladio

--- a/tex/font.tex
+++ b/tex/font.tex
@@ -1,15 +1,7 @@
 \usepackage{DejaVuSans}
-%\renewcommand*\familydefault{\sfdefault}
-%\renewcommand*\lyricfont{\sffamily\small}
-%\renewcommand*\printchord[1]{\sffamily\small\textsl{#1}}
 \renewcommand*\printchord[1]{\sffamily\small\textsl{#1}}
 
-
-%\usepackage{fourier}
-
-%\usepackage{DejaVuSerifCondensed}
-
-\usepackage{gfsartemisia-euler}
+\usepackage[sc]{mathpazo}
 \usepackage[T1]{fontenc}
 
 \renewcommand{\clineparams}{
