--- a/tex/gemeinde_songs.tex
+++ b/tex/gemeinde_songs.tex
@@ -1,3 +1,5 @@
 \setcounter{songnum}{500}
 
 \input{lieder/o_gottes_lamm,_fuer_suender_hingeschlachtet}
+\input{lieder/mir_ist_erbarmung_widerfahren}
+\input{lieder/gott_ist_gegenwaertig}
