--- a/tex/gemeinde_songs.tex
+++ b/tex/gemeinde_songs.tex
@@ -3,3 +3,5 @@
 \input{lieder/o_gottes_lamm,_fuer_suender_hingeschlachtet}
 \input{lieder/mir_ist_erbarmung_widerfahren}
 \input{lieder/gott_ist_gegenwaertig}
+\input{lieder/dass_du_mich_einstimmen_laesst}
+\input{lieder/dem,_der_uns_liebt}
