--- a/tex/gemeinde_songs.tex
+++ b/tex/gemeinde_songs.tex
@@ -5,3 +5,9 @@
 \input{lieder/gott_ist_gegenwaertig}
 \input{lieder/dass_du_mich_einstimmen_laesst}
 \input{lieder/dem,_der_uns_liebt}
+\input{lieder/ich_brau_dich_allezeit}
+\input{lieder/heilig_heilig_heilig}
+\input{lieder/ich_bete_an_die_macht_der_liebe}
+\input{lieder/ich_blicke_voll_beugung_und_staunen}
+\input{lieder/naeher,_noch_naeher}
+\input{lieder/fels_der_ewigkeiten}
