--- a/tex/eigene_mappe_songs.tex
+++ b/tex/eigene_mappe_songs.tex
@@ -1,4 +1,48 @@
+\setcounter{songnum}{8}
+
+\input{lieder/all_heav'n_declares}
+\input{lieder/der_himmel_zeugt}
+
+\setcounter{songnum}{13}
+
+\input{lieder/allein_deine_gnade_genuegt}
+
+\setcounter{songnum}{47}
+
+\input{lieder/der_grund_unsrer_dankbarkeit}
+
+\setcounter{songnum}{57}
+
+\input{lieder/ich_danke_meinem_gott}
+
+\setcounter{songnum}{71}
+
+\input{lieder/vater,_ich_komme_jetzt_zu_dir}
+
+\setcounter{songnum}{86}
+
+\input{lieder/love_the_lord}
+
+\setcounter{songnum}{101}
+
+\input{lieder/du_bist_unsre_zuversicht}
+\input{lieder/von_ganzem_herzen_will_ich_dir_danken}
+
+\setcounter{songnum}{104}
+
+\input{lieder/leben_aus_der_quelle}
+
+\setcounter{songnum}{122}
+
+\input{lieder/is_the_rain}
+\input{lieder/is_the_rain_mehr_griffe}
+
 \setcounter{songnum}{167}
 
 \input{lieder/herr_ich_sehe_deine_welt}
 \input{lieder/bist_zu_uns_wie_ein_vater}
+
+\setcounter{songnum}{229}
+
+\input{lieder/herr,_hier_ist_mein_herz}
+\input{lieder/lord_you_have_my_heart}
