--- a/tex/jugend_songs.tex
+++ b/tex/jugend_songs.tex
@@ -24,3 +24,5 @@
 \input{lieder/amazing_grace}
 \input{lieder/morgenstern}
 \input{lieder/herr_wir_bitten_komm_und_segne_uns}
+\input{lieder/nimm_mein_leben}
+\input{lieder/every_day}
