--- a/tex/eigene_mappe.tex
+++ b/tex/eigene_mappe.tex
@@ -8,6 +8,7 @@
 
 \input{tex/loben_songs}
 \input{tex/beide_songs}
+\input{tex/gemeinde_songs}
 \input{tex/jugend_songs}
 \input{tex/eigene_mappe_songs}
 
