--- a/tex/gemeinde_songs.tex
+++ b/tex/gemeinde_songs.tex
@@ -11,3 +11,5 @@
 \input{lieder/ich_blicke_voll_beugung_und_staunen}
 \input{lieder/naeher,_noch_naeher}
 \input{lieder/fels_der_ewigkeiten}
+\input{lieder/freue_dich_welt}
+\input{lieder/noch_haben_wir_sie_nicht_gesehn}
