--- a/tex/Jugend.tex
+++ b/tex/Jugend.tex
@@ -1,10 +1,10 @@
 \input{tex/chorded}
 
-\newindex{inhalt}{inhalt-jugend}
+\newindex{inhaltj}{inhalt-jugend}
 
 \begin{document}
 
-\begin{songs}{inhalt}
+\begin{songs}{inhaltj}
 
 \input{tex/loben_songs}
 \input{tex/beide_songs}
@@ -12,6 +12,6 @@
 
 \end{songs}
 
-\showindex[2]{Inhaltsverzeichnis}{inhalt}
+\showindex[2]{Inhaltsverzeichnis}{inhaltj}
 
 \end{document}
