--- a/tex/Jugend_TO.tex
+++ b/tex/Jugend_TO.tex
@@ -1,16 +1,17 @@
 \input{tex/textonly}
 
-\newindex{inhalt}{inhalt-jugend}
+\newindex{inhaltj}{inhalt-jugend}
 
 \begin{document}
 
-\begin{songs}{inhalt}
+\begin{songs}{inhaltj}
 
+\input{tex/loben_songs}
 \input{tex/beide_songs}
 \input{tex/jugend_songs}
 
 \end{songs}
 
-\showindex[2]{Inhaltsverzeichnis}{inhalt}
+\showindex[2]{Inhaltsverzeichnis}{inhaltj}
 
 \end{document}
