--- a/tex/jugend_songs.tex
+++ b/tex/jugend_songs.tex
@@ -26,3 +26,4 @@
 \input{lieder/herr_wir_bitten_komm_und_segne_uns}
 \input{lieder/nimm_mein_leben}
 \input{lieder/every_day}
+\input{lieder/let_us_adore}
