buildfehler behoben, generiert

--- a/tex/lungau_songs.tex
+++ b/tex/lungau_songs.tex
@@ -2,11 +2,11 @@
 
 \input{lieder/jesus_in_my_house}
 \input{lieder/viele_wege_gibt_es_auf_dieser_welt}
-\input{lieder/für_den_könig}
+\input{lieder/fuer_den_koenig}
 \input{lieder/die_herrlichkeit_des_herrn}
 \input{lieder/jesus_lebt}
 \input{lieder/vergiss_es_nie}
-\input{lieder/zünde_an_dein_feuer}
+\input{lieder/zuende_an_dein_feuer}
 \input{lieder/der_herr_ist_mein_hirte}
 \input{lieder/i_want_to_praise_you_lord}
 \input{lieder/the_nazarene}
@@ -23,13 +23,13 @@
 \input{lieder/el_shaddai_deutsch}
 \input{lieder/el_shaddai_orginal}
 \input{lieder/wohin_sonst}
-\input{lieder/wie_viel_schöne_stunden}
+\input{lieder/wie_viel_schoene_stunden}
 \input{lieder/du_bist_erhoben}
 \input{lieder/naehme_ich_fluegel_der_morgenroete}
 \input{lieder/the_servant_king}
 \input{lieder/i'm_forever_grateful}
 \input{lieder/shout_to_the_lord}
-\input{lieder/jesus_christus_starb_für_mich}
+\input{lieder/jesus_christus_starb_fuer_mich}
 \input{lieder/you_are_my_all_in_all}
 \input{lieder/love_the_lord}
 \input{lieder/allein_deine_gnade_genuegt}
@@ -65,7 +65,7 @@
 \input{lieder/you_are_my_hiding_place}
 \input{lieder/leben_aus_der_quelle}
 \input{lieder/above_all}
-\input{lieder/herr,_im_glanz_deiner_majestät}
+\input{lieder/herr_im_glanz_deiner_majestaet}
 \input{lieder/schoepfer_aller_himmel}
 \input{lieder/herr,_halte_mich_nah_bei_dir}
 \input{lieder/ich_danke_meinem_gott}
