--- a/tex/beide_songs.tex
+++ b/tex/beide_songs.tex
@@ -22,5 +22,5 @@
 \input{lieder/lobet_den_herrn_singt_ihm_ein_lied}
 \input{lieder/einzig_aus_gnade}
 \input{lieder/die_herrlichkeit_des_herrn}
-\input{lieder/jetzt_noch_verhüllt}
+\input{lieder/jetzt_noch_verhuellt}
 \input{lieder/du_bist_erhoben}
