--- a/tex/gemeinde_songs.tex
+++ b/tex/gemeinde_songs.tex
@@ -16,7 +16,7 @@
 \input{lieder/heilig_heilig_heilig}
 \input{lieder/wie_sag_ich_dir_dank}
 \input{lieder/herr,_lenke_unsre_herzen}
-\input{lieder/wenn_der_herr_die_seinen_heimführt}
+\input{lieder/wenn_der_herr_die_seinen_heimfuehrt}
 \input{lieder/herr_du_bist_vorangegangen}
 \input{lieder/du,_o_herr,_bist_unser_leben}
 \input{lieder/dich,_o_vater_zu_verehren,_dir_zu_bringen_preis_und_dank}
