--- a/tex/loben_songs.tex
+++ b/tex/loben_songs.tex
@@ -28,7 +28,7 @@
 
 \setcounter{songnum}{50}
 
-\input{lieder/vater,_ich_möchte_dir_danken}
+\input{lieder/vater_ich_moechte_dir_danken}
 
 \setcounter{songnum}{56}
 
@@ -95,7 +95,7 @@
 
 \setcounter{songnum}{111}
 
-\input{lieder/lobt_den_herrn_für_seine_grosse_guete}
+\input{lieder/lobt_den_herrn_fuer_seine_grosse_guete}
 
 \setcounter{songnum}{113}
 
@@ -117,7 +117,7 @@
 
 \setcounter{songnum}{137}
 
-\input{lieder/zünde_an_dein_feuer}
+\input{lieder/zuende_an_dein_feuer}
 
 \setcounter{songnum}{140}
 
@@ -151,7 +151,7 @@
 
 \setcounter{songnum}{170}
 
-\input{lieder/wie_der_töpfer_nimmt_den_ton}
+\input{lieder/wie_der_toepfer_nimmt_den_ton}
 
 \setcounter{songnum}{180}
 
@@ -168,7 +168,7 @@
 
 \setcounter{songnum}{197}
 
-\input{lieder/jesus_christus_starb_für_mich}
+\input{lieder/jesus_christus_starb_fuer_mich}
 
 \setcounter{songnum}{213}
 
@@ -184,7 +184,7 @@
 
 \setcounter{songnum}{225}
 
-\input{lieder/fürchte_dich_nicht,_ich_bin_bei_dir}
+\input{lieder/fuerchte_dich_nicht,_ich_bin_bei_dir}
 \input{lieder/es_geht_ohne_gott_in_die_dunkelheit}
 
 \setcounter{songnum}{229}
@@ -224,7 +224,7 @@
 
 \setcounter{songnum}{280}
 
-\input{lieder/wie_viel_schöne_stunden}
+\input{lieder/wie_viel_schoene_stunden}
 
 \setcounter{songnum}{319}
 
