--- a/tex/loben_songs.tex
+++ b/tex/loben_songs.tex
@@ -1,6 +1,6 @@
 \setcounter{songnum}{3}
 
-\input{lieder/lord,_i_lift_your_name_on_high}
+\input{lieder/lord_i_lift_your_name_on_high}
 \input{lieder/abba_vater}
 
 \setcounter{songnum}{7}
