--- a/tex/lungau_songs.tex
+++ b/tex/lungau_songs.tex
@@ -81,7 +81,7 @@
 \input{lieder/in_dir_ist_mein_leben}
 \input{lieder/nimm_mein_leben}
 \input{lieder/make_my_life_a_prayer}
-\input{lieder/lord,_i_lift_your_name_on_high}
+\input{lieder/lord_i_lift_your_name_on_high}
 \input{lieder/blessed_be_your_name}
 \input{lieder/humble_thyself}
 \input{lieder/i_will_magnify_the_lord}
