--- a/tex/loben_songs.tex
+++ b/tex/loben_songs.tex
@@ -50,6 +50,10 @@
 \input{lieder/vater,_ich_komme_jetzt_zu_dir}
 \input{lieder/denn_ich_bin_gewiss}
 
+\setcounter{songnum}{74}
+
+\input{lieder/lobet_den_herrn_singt_ihm_ein_lied}
+
 \setcounter{songnum}{79}
 
 \input{lieder/wie_oft}
