--- a/tex/eigene_mappe_songs.tex
+++ b/tex/eigene_mappe_songs.tex
@@ -11,3 +11,4 @@
 \input{lieder/the_light_of_the_world}
 \input{lieder/unser_vater_in_dem_himmel}
 \input{lieder/aus_erbarmen_nimm_mich_armen}
+\input{lieder/now_that_i_have_held_him_in_my_arms}
