lasst zu meinem
hinzugefügt

--- a/tex/eigene_mappe_songs.tex
+++ b/tex/eigene_mappe_songs.tex
@@ -13,3 +13,4 @@
 \input{lieder/aus_erbarmen_nimm_mich_armen}
 \input{lieder/now_that_i_have_held_him_in_my_arms}
 \input{lieder/dank_dir_o_herr_dass_gold_und_schätze}
+\input{lieder/lasst_zu_meinem_herrn_mich_ziehen}
