--- a/tex/lungau_songs.tex
+++ b/tex/lungau_songs.tex
@@ -1,91 +1,118 @@
 \setcounter{songnum}{001}
 
-\input{lieder/jesus_in_my_house}
-\input{lieder/viele_wege_gibt_es_auf_dieser_welt}
-\input{lieder/fuer_den_koenig}
-\input{lieder/die_herrlichkeit_des_herrn}
-\input{lieder/jesus_lebt}
-\input{lieder/vergiss_es_nie}
-\input{lieder/zuende_an_dein_feuer}
-\input{lieder/der_herr_ist_mein_hirte}
-\input{lieder/i_want_to_praise_you_lord}
-\input{lieder/the_nazarene}
-\input{lieder/my_eyes_are_dry}
-\input{lieder/let_us_adore}
-\input{lieder/Jesus_will_uns_bau'n_zu_einem_Tempel}
-\input{lieder/ich_bin_bei_dir}
-\input{lieder/ich_will_dich_erheben}
-\input{lieder/is_the_rain}
-\input{lieder/vater,_ich_komme_jetzt_zu_dir}
-\input{lieder/jesus_zu_dir_darf_ich_so_kommen}
-\input{lieder/der_herr_zeigte_dir}
-\input{lieder/thy_word}
-\input{lieder/el_shaddai_deutsch}
-\input{lieder/el_shaddai_orginal}
-\input{lieder/wohin_sonst}
-\input{lieder/wie_viel_schoene_stunden}
-\input{lieder/du_bist_erhoben}
-\input{lieder/naehme_ich_fluegel_der_morgenroete}
-\input{lieder/the_servant_king}
-\input{lieder/i'm_forever_grateful}
-\input{lieder/shout_to_the_lord}
-\input{lieder/jesus_christus_starb_fuer_mich}
-\input{lieder/you_are_my_all_in_all}
-\input{lieder/love_the_lord}
-\input{lieder/allein_deine_gnade_genuegt}
-\input{lieder/der_lastentraeger}
-\input{lieder/heart_of_worship}
-\input{lieder/this_is_my_desire}
-\input{lieder/zeichen_deiner_liebe}
-\input{lieder/anker_in_der_zeit}
-\input{lieder/wie_ein_hirsch}
-\input{lieder/there_is_a_redeemer}
-\input{lieder/o_lord,_you_are_beatiful}
-\input{lieder/fear_not}
-\input{lieder/in_christus_ist_geaenderte_Version}
-\input{lieder/in_christ_alone_geaenderte_Version}
-\input{lieder/blind_man}
-\input{lieder/be_thou_my_vision}
-\input{lieder/steh_mir_vor_augen}
-\input{lieder/du_hast_erbarmen}
-\input{lieder/lass_mir_das_ziel_vor_augen_bleiben}
-\input{lieder/step_by_step}
-\input{lieder/ich_singe_dir_ein_liebeslied_arms_of_love}
-\input{lieder/reign_in_me}
-\input{lieder/wo_ich_auch_stehe}
-\input{lieder/amazing_love}
-\input{lieder/ein_leben,_gegeben}
-\input{lieder/man_of_faith}
-\input{lieder/immer_mehr}
-\input{lieder/unser_herr_ist_ein_ewiger_gott}
-\input{lieder/du_kommst_wieder}
-\input{lieder/light_of_the_world}
-\input{lieder/who_am_i}
-\input{lieder/shine_jesus_shine}
-\input{lieder/you_are_my_hiding_place}
-\input{lieder/leben_aus_der_quelle}
-\input{lieder/above_all}
-\input{lieder/herr_im_glanz_deiner_majestaet}
-\input{lieder/schoepfer_aller_himmel}
-\input{lieder/herr,_halte_mich_nah_bei_dir}
-\input{lieder/ich_danke_meinem_gott}
-\input{lieder/diese_macht_hat_das_kreuz}
-\input{lieder/du_koenig_jahwe}
-\input{lieder/wie_tief_muss_gottes_liebe_sein}
-\input{lieder/how_deep_the_fathers_love}
-\input{lieder/wie_ein_fest_nach_langer_trauer}
-\input{lieder/die_majestaet_legtest_du_ab}
-\input{lieder/you_laid_aside_your_majesty}
-\input{lieder/all_die_fuelle_ist_in_dir}
-\input{lieder/du_bist_der_weg}
-\input{lieder/in_dir_ist_mein_leben}
-\input{lieder/nimm_mein_leben}
-\input{lieder/make_my_life_a_prayer}
-\input{lieder/lord_i_lift_your_name_on_high}
-\input{lieder/blessed_be_your_name}
-\input{lieder/humble_thyself}
-\input{lieder/i_will_magnify_the_lord}
-\input{lieder/sing_halleluja_unsserm_herrn}
 \input{lieder/herr_wie_unaussprechlich_selig}
-\input{lieder/mighty_to_save}
-\input{lieder/amazing_grace}
+\input{lieder/gott_dich_wuerdig_zu_verehren}
+\input{lieder/there_is_a_redeemer}
+\input{lieder/naehme_ich_fluegel_der_morgenroete}
+\input{lieder/der_lastentraeger}
+\input{lieder/vergiss_es_nicht}
+\input{lieder/der_du_das_all_regierst}
+\input{lieder/the_sacrifice_lamb}
+\input{lieder/whom_have_i}
+\input{lieder/jesus_lebt}
+\input{lieder/above_all}
+\input{lieder/o_gottes_lamm,_fuer_suender_hingeschlachtet}
+\input{lieder/nimm_mein_leben}
+\input{lieder/wohin_sonst}
+\input{lieder/thy_word}
+\input{lieder/tell_the_world}
+\input{lieder/Jesus_will_uns_bau'n_zu_einem_Tempel}
+\input{lieder/herr_ich_komme_zu_dir}
+\input{lieder/the_nazarene}
+\input{lieder/you_are_the_light_of_the_world}
+\input{lieder/psalm_150}
+\input{lieder/create_in_me_a_clean_heart}
+\input{lieder/vergiss_es_nie}
+\input{lieder/man_sagt}
+\input{lieder/i_want_to_praise_you_lord}
+\input{lieder/wie_ein_hirsch}
+\input{lieder/why}
+\input{lieder/is_the_rain}
+\input{lieder/el_shaddai_deutsch}
+\input{lieder/make_my_life_a_prayer}
+\input{lieder/du_koenig_jahwe}
+\input{lieder/blind_man}
+\input{lieder/only_you}
+\input{lieder/gluecklich_ist_der_mensch}
+\input{lieder/father_god_i_wonder}
+\input{lieder/wuerdig_das_lamm}
+\input{lieder/vergiss_nicht_zu_danken}
+\input{lieder/wohl_dem_der_nicht_wandelt}
+\input{lieder/jesus_zu_dir_darf_ich_so_kommen}
+\input{lieder/eines_tages_hörte_ich}
+\input{lieder/you_are_my_all_in_all}
+\input{lieder/es_ist_vollbracht}
+\input{lieder/ich_bin_nicht_wert}
+\input{lieder/vater,_ich_komme_jetzt_zu_dir}
+\input{lieder/du_hast_erbarmen}
+\input{lieder/du_bist_mein_zufluchtsort}
+\input{lieder/du_bist_der_weg}
+\input{lieder/amazing_love}
+\input{lieder/love_the_lord}
+\input{lieder/lord_i_lift_your_name_on_high}
+\input{lieder/meine_zeit_steht_in_deinen_haenden}
+\input{lieder/der_herr_ist_mein_hirte}
+\input{lieder/ich_trau_auf_dich_oh_herr}
+\input{lieder/let_us_adore}
+\input{lieder/denn_ich_bin_gewiss}
+\input{lieder/du_gibst_das_leben}
+\input{lieder/all_die_fuelle_ist_in_dir}
+\input{lieder/herr_du_gibst_uns_hoffnung}
+\input{lieder/sei_ein_lebendiger_fisch}
+\input{lieder/hell_strahlt_die_sonne}
+\input{lieder/sei_stark_und_mutig}
+\input{lieder/geh_unter_der_gnade}
+\input{lieder/this_is_my_desire}
+\input{lieder/jesus_in_my_house}
+\input{lieder/jesus_christus_kennt_dich}
+\input{lieder/der_weinstock}
+\input{lieder/gott_wurde_arm_für_uns}
+\input{lieder/fear_not}
+\input{lieder/lobet_den_herrn_singt_ihm_ein_lied}
+\input{lieder/i_lift_my_eyes_up}
+\input{lieder/dass_dein_wort_in_meinem_herzen}
+\input{lieder/allein_deine_gnade_genuegt}
+\input{lieder/my_eyes_are_dry}
+\input{lieder/ich_will_dich_erheben}
+\input{lieder/einzig_aus_gnade}
+\input{lieder/the_servant_king}
+\input{lieder/jesus_wir_sehen_auf_dich}
+\input{lieder/o_lord,_you_are_beatiful}
+\input{lieder/shout_to_the_lord}
+\input{lieder/herr,_halte_mich_nah_bei_dir}
+\input{lieder/lass_mir_das_ziel_vor_augen_bleiben}
+\input{lieder/die_herrlichkeit_des_herrn}
+\input{lieder/anker_in_der_zeit}
+\input{lieder/simon_von_kyrene}
+\input{lieder/my_savior_my_god}
+\input{lieder/ich_bin_entschieden_zu_folgen_jesus}
+\input{lieder/lobpreiset_unsern_gott_freuet_euch}
+\input{lieder/von_ganzem_herzen_will_ich_dir_danken}
+\input{lieder/sing_halleluja_unsserm_herrn}
+\input{lieder/gott,_mein_herr,_es_ist_mir_ernst}
+\input{lieder/herr_ich_sehe_deine_welt}
+\input{lieder/es_geht_ohne_gott_in_die_dunkelheit}
+\input{lieder/humble_thyself}
+\input{lieder/jetzt_noch_verhuellt}
+\input{lieder/jesus_christus_starb_fuer_mich}
+\input{lieder/i'm_forevver_gratefull}
+\input{lieder/day_by_day}
+\input{lieder/viele_wege_gibt_es_auf_dieser_welt}
+\input{lieder/herr,_lenke_unsre_herzen}
+\input{lieder/von_guten_mächten}
+\input{lieder/step_by_step}
+\input{lieder/o_gott,_du_bist_mein_gott}
+\input{lieder/der_himmel_zeugt}
+\input{lieder/du_bist_erhoben_version_bhofen}
+\input{lieder/ein_leben,_gegeben}
+\input{lieder/unser_herr_ist_ein_ewiger_gott}
+\input{lieder/lord_you_have_my_heart}
+\input{lieder/man_of_faith}
+\input{lieder/wenn_der_herr_die_seinen_heimfuehrt}
+\input{lieder/how_lovely}
+\input{lieder/how_great_is_our_god}
+\input{lieder/wo_ich_auch_stehe}
+\input{lieder/who_am_i}
+\input{lieder/zuende_an_dein_feuer}
+\input{lieder/in_christus_ist_geaenderte_Version}
+\input{lieder/wie_tief_muss_gottes_liebe_sein}
