--- a/tex/eigene_mappe_songs.tex
+++ b/tex/eigene_mappe_songs.tex
@@ -13,4 +13,5 @@
 \input{lieder/lasst_zu_meinem_herrn_mich_ziehen}
 \input{lieder/aus_erbarmen_nimm_mich_armen}
 \input{lieder/now_that_i_have_held_him_in_my_arms}
+\input{lieder/then_they_will_know}
 \input{lieder/gottes_lamm}
