--- a/tex/beide_songs.tex
+++ b/tex/beide_songs.tex
@@ -23,3 +23,4 @@
 \input{lieder/die_herrlichkeit_des_herrn}
 \input{lieder/jetzt_noch_verhuellt}
 \input{lieder/du_bist_erhoben}
+\input{lieder/no_longer_i}
