--- a/tex/gemeinde_songs.tex
+++ b/tex/gemeinde_songs.tex
@@ -21,3 +21,4 @@
 \input{lieder/du,_o_herr,_bist_unser_leben}
 \input{lieder/dich,_o_vater_zu_verehren,_dir_zu_bringen_preis_und_dank}
 \input{lieder/ich_steh_an_deiner_krippe_hier}
+\input{lieder/er_ist_mein_erloeser}
