neue Lieder eingefügt
letzte Session

--- a/tex/beide_songs.tex
+++ b/tex/beide_songs.tex
@@ -21,6 +21,8 @@
 \input{lieder/ich_gehe_heim}
 \input{lieder/einzig_aus_gnade}
 \input{lieder/die_herrlichkeit_des_herrn}
+\input{lieder/er_ist_mein_erloeser}
 \input{lieder/jetzt_noch_verhuellt}
 \input{lieder/du_bist_erhoben}
-\input{lieder/no_longer_i}
+\input{lieder/dank_dir_o_herr_dass_gold_und_schätze}
+\input{lieder/das_hoechste_meines_lebens}
