--- a/tex/jugend_songs.tex
+++ b/tex/jugend_songs.tex
@@ -6,9 +6,11 @@
 \input{lieder/Jesus_will_uns_bau'n_zu_einem_Tempel}
 \input{lieder/this_is_my_desire}
 \input{lieder/my_savior_my_god}
+\input{lieder/no_longer_i}
 \input{lieder/humble_thyself}
 \input{lieder/above_all}
 \input{lieder/amazing_love}
+\input{lieder/unser_vater_in_dem_himmel}
 \input{lieder/wohin_sonst}
 \input{lieder/herr_ich_komme_zu_dir}
 \input{lieder/only_you}
@@ -33,4 +35,13 @@
 \input{lieder/wo_ich_auch_stehe}
 \input{lieder/who_am_i}
 \input{lieder/only_by_grace_we_can_enter}
+\input{lieder/el_shaddai_orginal}
+\input{lieder/the_nazarene}
+\input{lieder/how_long}
+\input{lieder/steh_mir_vor_augen}
+\input{lieder/be_thou_my_vision}
 \input{lieder/wer_bittet_dem_wird_gegeben}
+\input{lieder/10000_resons}
+\input{lieder/the_light_of_the_world}
+\input{lieder/creation_sings}
+\input{lieder/come_people_of_the_risen_king}
