--- a/tex/eigene_mappe.tex
+++ b/tex/eigene_mappe.tex
@@ -6,9 +6,8 @@
 
 \begin{songs}{inhalt}
 
-\input{tex/loben_songs}
 \input{tex/beide_songs}
-\input{tex/jugend_songs}
+\input{tex/gemeinde_songs}
 
 \end{songs}
 
