--- a/tex/eigene_mappe.tex
+++ b/tex/eigene_mappe.tex
@@ -6,8 +6,11 @@
 
 \begin{songs}{inhalt}
 
+\input{tex/loben_songs}
 \input{tex/beide_songs}
 \input{tex/gemeinde_songs}
+\input{tex/jugend_songs}
+\input{tex/eigene_mappe_songs}
 
 \end{songs}
 
