--- a/tex/gemeinde_songs.tex
+++ b/tex/gemeinde_songs.tex
@@ -20,3 +20,4 @@
 \input{lieder/dich,_o_vater_zu_verehren,_dir_zu_bringen_preis_und_dank}
 \input{lieder/ich_steh_an_deiner_krippe_hier}
 \input{lieder/wenn_der_herr_die_seinen_heimfuehrt}
+\input{lieder/wie_sag_ich_dir_dank}
